logs/2021-08-18_20-38-39.txt
npm WARN example-app@1.0.0 No repository field.

up to date in 0.351s
found 0 vulnerabilities

/home/minecraft/multicraft/servers/server213362/bot.js:41
      let status = member.presence?.status
                                   ^

SyntaxError: Unexpected token '.'
    at wrapSafe (internal/modules/cjs/loader.js:1047:16)
    at Module._compile (internal/modules/cjs/loader.js:1097:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1153:10)
    at Module.load (internal/modules/cjs/loader.js:977:32)
    at Function.Module._load (internal/modules/cjs/loader.js:877:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:74:12)
    at internal/main/run_main_module.js:18:47
